kubernetes/gatewayAPI/manifests/eks/01_private_alb_http_simple/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: priavte-alb-http
spec:
  gatewayClassName: alb
  listeners:
  - name: http
    protocol: HTTP
    port: 80
